--- a/app/src/main/res/layout/past_singles_match_item_row.xml
+++ b/app/src/main/res/layout/past_singles_match_item_row.xml
@@ -72,9 +72,10 @@
             android:id="@+id/local_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/old_local_score"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
 
@@ -82,10 +83,10 @@
             android:id="@+id/old_local_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/local_score"
+            app:layout_constraintEnd_toStartOf="@+id/confirmed_label"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
 
@@ -115,11 +116,10 @@
             android:id="@+id/old_visitor_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/visitor_score"
+            app:layout_constraintStart_toEndOf="@+id/confirmed_label"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
 
@@ -127,9 +127,10 @@
             android:id="@+id/visitor_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/old_visitor_score"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
     </androidx.constraintlayout.widget.ConstraintLayout>
