--- a/app/src/main/res/layout/users_list_fragment.xml
+++ b/app/src/main/res/layout/users_list_fragment.xml
@@ -69,7 +69,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
                 app:fabSize="mini"
-                app:srcCompat="@android:drawable/ic_dialog_map" />
+                app:srcCompat="@drawable/ic_championship" />
         </LinearLayout>
 
         <LinearLayout
@@ -100,7 +100,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
                 app:fabSize="mini"
-                app:srcCompat="@android:drawable/ic_dialog_map" />
+                app:srcCompat="@drawable/ic_doubles" />
         </LinearLayout>
 
         <LinearLayout
@@ -131,7 +131,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
                 app:fabSize="mini"
-                app:srcCompat="@android:drawable/ic_dialog_map" />
+                app:srcCompat="@drawable/ic_singles" />
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
