--- a/app/src/main/res/layout/new_championship_activity.xml
+++ b/app/src/main/res/layout/new_championship_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -90,9 +91,9 @@
             android:id="@+id/users_selected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/x_users_selected"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView7" />
+            app:layout_constraintTop_toTopOf="@+id/textView7"
+            tools:text="0 users selected" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/users_list"
