--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/matches" />
 
     <item
+        android:id="@+id/menu_events"
+        android:icon="@drawable/ic_calendar"
+        android:title="@string/events" />
+
+    <item
         android:id="@+id/menu_new_match"
         android:icon="@drawable/ic_sword"
         android:title="@string/find_a_rival" />
