--- a/app/src/main/res/layout/new_championship_activity.xml
+++ b/app/src/main/res/layout/new_championship_activity.xml
@@ -34,6 +34,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/edit_icon_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_edit"
+            app:layout_constraintBottom_toBottomOf="@+id/icon"
+            app:layout_constraintEnd_toEndOf="@+id/icon" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
