--- a/app/src/main/res/layout/past_singles_match_item_row.xml
+++ b/app/src/main/res/layout/past_singles_match_item_row.xml
@@ -83,10 +83,10 @@
             android:id="@+id/old_local_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="24dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/confirmed_label"
+            app:layout_constraintEnd_toStartOf="@+id/confirmed_icon"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
 
@@ -116,10 +116,10 @@
             android:id="@+id/old_visitor_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="24dp"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/confirmed_label"
+            app:layout_constraintStart_toEndOf="@+id/confirmed_icon"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="15" />
 
